added tweets embeded

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -15,6 +15,6 @@
 <a href="https://www.holbertonschool.com/holberton-logo.png">
     <img src="https://www.holbertonschool.com/holberton-logo.png" alt="google logo">
 </a>
-    
+    <a href="./tweets.html">tweets</a>
 </body>
 </html>
