--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -16,5 +16,17 @@
     <img src="https://www.holbertonschool.com/holberton-logo.png" alt="google logo">
 </a>
     <a href="./tweets.html">tweets</a>
+
+    <ul>
+        <li>
+            <a href="./tweets.html">tweets</a>
+        </li>
+    </ul>
+    <article></article>
+    <aside></aside>
+    <footer>
+        Made by Muhodari Sage <a href="https://google.com/" target="_blank">here</a>
+      
+    </footer>
 </body>
 </html>
