--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Basics of html</title>
+    <ul>
+        <li>
+            <a href="./index.html">Index</a>
+        </li>
+    </ul>
 </head>
 <body>
     <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Ice cream is an amazing invention <a href="https://t.co/l2tPcBMuy7">pic.twitter.com/l2tPcBMuy7</a></p>&mdash; Elon Musk (@elonmusk) <a href="https://twitter.com/elonmusk/status/1791689030641578286?ref_src=twsrc%5Etfw">May 18, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js"></script>
     <a href="./index.html">Index</a>  
+    <article></article>
+    <aside></aside>
+    <footer>
+        Made by Muhodari Sage <a href="https://google.com/" target="_blank">here</a>
+    </footer>
 </body>
 </html>
